<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pf3400_motion_control_example</name>
  <version>0.0.1</version>
  <description>Original Closed source ROS1 implementation for PF3400. This is repackaged to work with ROS2 by Dmitrii</description>
  <author email="alex.reed@preciseautomation.com">Alex Reed</author>
  <maintainer email="alex.reed@preciseautomation.com">Alex Reed</maintainer>
  <maintainer email="dmitrii@industrialnext.ai">Dmitrii Gusev</maintainer>
  <license>MIT</license>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
